--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vertex Colors</title>
+    <title>Triangle Vertex Colors</title>
     <style>
       body {
         margin: 0;
